@@ -646,6 +646,18 @@ class Test00_SimpleLDAPObject(SlapdTestCase):
             [self.server.suffix.encode('utf-8')]
         )
 
+    def test_compare_s_true(self):
+        base = self.server.suffix
+        l = self._ldap_conn
+        result = l.compare_s('cn=Foo1,%s' % base, 'cn', 'Foo1')
+        self.assertIs(result, True)
+
+    def test_compare_s_false(self):
+        base = self.server.suffix
+        l = self._ldap_conn
+        result = l.compare_s('cn=Foo1,%s' % base, 'cn', 'Foo2')
+        self.assertIs(result, False)
+
 
 class Test01_ReconnectLDAPObject(Test00_SimpleLDAPObject):
     """
